# nimble

./: .gersemirc  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  license.header  specification.qmd
dwio/alpha/common/tests/: AlphaFileWriter.cpp  AlphaFileWriter.h  BitEncoderTests.cpp  BitsTests.cpp  CMakeLists.txt  ExceptionTests.cpp  FixedBitArrayTests.cpp  IndexMapTests.cpp  StopWatchTests.cpp  TestUtils.h  VectorTests.cpp
dwio/alpha/encodings/: CMakeLists.txt  Compression.cpp  Compression.h  CompressionInternal.h  CompressionZstd.cpp  CompressionZstrong.cpp  DeltaEncoding.h  Encoding.cpp  Encoding.h  EncodingLayout.cpp  EncodingLayout.h  EncodingLayoutCapture.cpp  EncodingSelection.h  EncodingSelectionPolicy.h  FixedBitWidthEncoding.h  NullableEncoding.h  RleEncoding.h  SentinelEncoding.h  SparseBoolEncoding.cpp  SparseBoolEncoding.h  Statistics.cpp  Statistics.h  TrivialEncoding.cpp  TrivialEncoding.h
dwio/alpha/encodings/cuda/: DecodeDictionary.cuh  DecodeRle.cuh  GpuDecoder-inl.cuh  GpuDecoder.cuh  ScatterIndices.cuh
dwio/alpha/encodings/tests/: CMakeLists.txt  EncodingLayoutTests.cpp  EncodingSelectionTests.cpp  EncodingTestsNew.cpp  NullableEncodingTests.cpp  TestGenerator.cpp  TestUtils.h
dwio/alpha/velox/tests/: BufferGrowthPolicyTest.cpp  CMakeLists.txt  ChunkedStreamDecoderTests.cpp  ChunkedStreamTests.cpp  EncodingLayoutTreeTests.cpp  FlatMapLayoutPlannerTests.cpp  OrderedRangesTests.cpp  SchemaTests.cpp  SchemaUtils.cpp  SchemaUtils.h  SerializationTests.cpp  TypeTests.cpp  VeloxReaderTests.cpp  VeloxWriterTests.cpp
dwio/nimble/common/tests/: BitEncoderTests.cpp  BitsTests.cpp  BufferPoolTest.cpp  BufferPoolTests.cpp  BufferTest.cpp  CMakeLists.txt  ChecksumTest.cpp  ChunkHeaderTest.cpp  ConstantsTest.cpp  EncodingPrimitivesTest.cpp  EncodingTypeTest.cpp  ExceptionHelperTest.cpp  ExceptionTests.cpp  FixedBitArrayTests.cpp  GTestUtils.h  HuffmanTests.cpp  IndexMapTests.cpp  MetricsLoggerTest.cpp  NimbleCompare.h  NimbleFileWriter.cpp  NimbleFileWriter.h  RleTests.cpp  StatsUtilTest.cpp  StopWatchTests.cpp  TestUtils.h  TypesTest.cpp  VarintTests.cpp  VectorTest.cpp  VectorTests.cpp  ZigzagTests.cpp
dwio/nimble/encodings/: ADDING_NEW_ENCODING.md  ALPEncoding.h  BlockBitPackingEncoding.h  CMakeLists.txt  CompactForEncoding.h  Compression.cpp  Compression.h  CompressionInternal.h  CompressionZstd.cpp  CompressionZstrong.cpp  ConstantEncoding.cpp  ConstantEncoding.h  DeltaBlockEncoding.h  DeltaEncoding.h  DictionaryEncoding.h  DoubleDeltaEncoding.h  ENCODING_SELECTION_FLOW.md  Encoding.cpp  Encoding.h  EncodingFactory.cpp  EncodingFactory.h  EncodingFactoryNew.cpp  EncodingFactoryNew.h  EncodingIdentifier.h  EncodingLayout.cpp  EncodingLayout.h  EncodingLayoutCapture.cpp  EncodingLayoutCapture.h  EncodingPrefix.h  EncodingSelection.h  EncodingSelectionPolicy.h  EncodingSizeEstimation.h  EncodingUtils.h  FixedBitWidthEncoding.h  FixedBitWidthEncodingV2.h  ForEncoding.h  FrequencyPartitionEncoding.h  FsstEncoding.cpp  FsstEncoding.h  HuffmanEncoding.h  (+35 more)
dwio/nimble/encodings/benchmarks/: CMakeLists.txt  (+23 more)
dwio/nimble/index/: BloomFilter.cpp  BloomFilter.h  CMakeLists.txt  ChunkIndex.cpp  ChunkIndex.h  ChunkIndexGroup.cpp  ChunkIndexGroup.h  ChunkStats.cpp  ChunkStats.h  ChunkStatsGroup.cpp  ChunkStatsGroup.h  ClusterIndex.cpp  ClusterIndex.h  ClusterIndexFactory.cpp  ClusterIndexFactory.h  ClusterIndexGroup.cpp  ClusterIndexGroup.h  ClusterIndexReader.cpp  ClusterIndexReader.h  ClusterIndexWriter.cpp  ClusterIndexWriter.h  DenseIndexFactory.cpp  DenseIndexFactory.h  DenseIndexRegistry.cpp  DenseIndexRegistry.h  HashIndex.cpp  HashIndex.h  HashIndexUtils.h  HashIndexWriter.cpp  HashIndexWriter.h  IndexConfig.cpp  IndexConfig.h  IndexConstants.h  IndexFactoryRegistry.h  IndexFilter.cpp  IndexFilter.h  IndexKeyEncoder.cpp  IndexKeyEncoder.h  IndexKeyReader.cpp  IndexKeyReader.h  (+28 more)
dwio/nimble/serializer/: CMakeLists.txt  Deserializer.cpp  Deserializer.h  DeserializerImpl.cpp  DeserializerImpl.h  Options.cpp  Options.h  Projector.cpp  Projector.h  SerializationHeader.cpp  SerializationHeader.h  Serializer.cpp  Serializer.h  SerializerImpl.cpp  SerializerImpl.h  StreamSelector.cpp  StreamSelector.h
dwio/nimble/tablet/: BloomFilter.fbs  CMakeLists.txt  Callbacks.h  Chunk.h  ChunkIndex.fbs  ChunkIndexWriter.cpp  ChunkIndexWriter.h  ChunkStats.fbs  ChunkStatsWriter.cpp  ChunkStatsWriter.h  ClusterIndex.fbs  ClusterIndexWriter.cpp  ClusterIndexWriter.h  Compression.cpp  Compression.h  Constants.h  DataInput.cpp  DataInput.h  DenseIndex.fbs  FileLayout.cpp  FileLayout.h  Footer.fbs  HashIndex.fbs  Index.fbs  MetadataBuffer.cpp  MetadataBuffer.h  MetadataCache.h  MetadataInput.cpp  MetadataInput.h  NimbleFeatureVersion.h  Postscript.cpp  Postscript.h  SortedIndex.fbs  StripeGroup.cpp  StripeGroup.h  Tablet.cpp  Tablet.h  TabletIndexWriter.cpp  TabletIndexWriter.h  TabletReader.cpp  (+6 more)
dwio/nimble/tools/: CMakeLists.txt  EncodingLayoutTrainer.cpp  EncodingLayoutTrainer.h  EncodingSelectionLogger.cpp  EncodingUtilities.cpp  EncodingUtilities.h  NimbleDsl.cpp  NimbleDslLib.cpp  NimbleDslLib.h  NimbleDslVm.cpp  NimbleDslVm.h  NimbleDump.cpp  NimbleDumpLib.cpp  NimbleDumpLib.h  ParallelReader.cpp  ParallelWriter.cpp  SerializerDumpLib.cpp  SerializerDumpLib.h
dwio/nimble/velox/: BufferGrowthPolicy.cpp  BufferGrowthPolicy.h  CMakeLists.txt  ChunkedStream.cpp  ChunkedStream.h  ChunkedStreamDecoder.cpp  ChunkedStreamDecoder.h  ChunkedStreamWriter.cpp  ChunkedStreamWriter.h  Config.cpp  Config.h  DecodedVectorManager.cpp  DecodedVectorManager.h  Decoder.h  DeduplicationUtils.cpp  DeduplicationUtils.h  Deserializer.cpp  Deserializer.h  EncodingLayoutTree.cpp  EncodingLayoutTree.h  FieldReader.cpp  FieldReader.h  FieldWriter.cpp  FieldWriter.h  FlatMapLayoutPlanner.cpp  FlatMapLayoutPlanner.h  FlushPolicy.cpp  FlushPolicy.h  FlushPolicyFactory.cpp  FlushPolicyFactory.h  IndexReader.cpp  IndexReader.h  IndexWriter.cpp  IndexWriter.h  LayoutPlanner.cpp  LayoutPlanner.h  Metadata.fbs  NimbleConfig.cpp  NimbleConfig.h  NimbleReader.cpp  (+42 more)
(+664 files in other folders)
