# Copyright (c) Meta Platforms, Inc. and affiliates.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
add_subdirectory(tests)

add_library(nimble_serializer_options Options.cpp)
target_link_libraries(
  nimble_serializer_options
  nimble_common
  nimble_encodings
  nimble_velox_writer
  Folly::folly
)

add_library(nimble_serializer_impl SerializerImpl.cpp)
target_link_libraries(
  nimble_serializer_impl
  nimble_serializer_options
  nimble_common
  nimble_encodings
  nimble_velox_stream_data
  velox_memory
)

add_library(nimble_deserializer_impl DeserializerImpl.cpp)
target_link_libraries(
  nimble_deserializer_impl
  nimble_serializer_options
  nimble_encodings
  nimble_velox_schema
  nimble_common
  velox_memory
)

add_library(nimble_deserializer Deserializer.cpp)
target_link_libraries(
  nimble_deserializer
  nimble_deserializer_impl
  nimble_serializer_options
  nimble_velox_common
  nimble_velox_field_reader
  nimble_common
  velox_vector
  velox_memory
  Folly::folly
)

add_library(nimble_serializer Serializer.cpp)
target_link_libraries(
  nimble_serializer
  nimble_serializer_options
  nimble_serializer_impl
  nimble_common
  nimble_velox_field_writer
  velox_vector
  Folly::folly
)

add_library(nimble_projector Projector.cpp)
target_link_libraries(
  nimble_projector
  nimble_serializer_options
  nimble_serializer_impl
  nimble_velox_schema_reader
  nimble_common
  velox_type
  Folly::folly
)
